# schach

./: .gitignore  CMakeLists.txt
src/: IllegalMoveException.cpp  IllegalMoveException.h  TranslationException.cpp  TranslationException.h  board.cpp  board.h  lookups.cpp  lookups.h  main.cpp  operation.cpp  operation.h  pieces.cpp  pieces.h  player.cpp  player.h  translation.cpp  translation.h
